test/files/neg/t3346i.check
t3346i.scala:28: error: value a is not a member of Test.A[T]
  (new A).a
          ^
t3346i.scala:29: error: value a is not a member of Test.A[Nothing]
  (new A[Nothing]).a
                   ^
two errors found
